crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/fallback_function_signature/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 5

[TypeError 5570] Error: Fallback function either has to have the signature "fallback()" or "fallback(bytes calldata) returns (bytes memory)".
   ╭─[input.sol:6:32]
   │
 6 │     fallback(uint256) external {}
   │                                │ 
   │                                ╰─ Error occurred here.
───╯

[TypeError 5570] Error: Fallback function either has to have the signature "fallback()" or "fallback(bytes calldata) returns (bytes memory)".
    ╭─[input.sol:11:33]
    │
 11 │     fallback() external returns (uint256) {}
    │                                 ────┬────  
    │                                     ╰────── Error occurred here.
────╯

[TypeError 5570] Error: Fallback function either has to have the signature "fallback()" or "fallback(bytes calldata) returns (bytes memory)".
    ╭─[input.sol:16:45]
    │
 16 │     fallback(bytes memory) external returns (bytes memory) {}
    │                                             ───────┬──────  
    │                                                    ╰──────── Error occurred here.
────╯

[TypeError 5570] Error: Fallback function either has to have the signature "fallback()" or "fallback(bytes calldata) returns (bytes memory)".
    ╭─[input.sol:21:47]
    │
 21 │     fallback(bytes calldata) external returns (bytes calldata) {}
    │                                               ────────┬───────  
    │                                                       ╰───────── Error occurred here.
────╯

[TypeError 5570] Error: Fallback function either has to have the signature "fallback()" or "fallback(bytes calldata) returns (bytes memory)".
    ╭─[input.sol:26:33]
    │
 26 │     fallback() external returns (bytes memory, bytes memory) {}
    │                                 ──────────────┬─────────────  
    │                                               ╰─────────────── Error occurred here.
────╯
